# avito_interview

./: CMakeLists.txt  README.md  main.cpp  text.txt
frequency_counter/: frequency_counter.cpp  frequency_counter.h
tests/: frequency_counter_tests.cpp
